     https://github.com/mozilla-b2g/gaia/tree/master/apps/keyboard/js/imes/latin/dictionaries,
     as for other languages that already use this feature).
    -Better suggestions for English learners: irregular verbs, nouns, and adjectives now
     usually have a better suggestion. For example, 'thinked' suggests 'thought',
     'womans' suggests 'women'.
    -New rule that checks if a weekday matches a date, e.g. detects
     "Monday, 7 October 2014", as that date isn't a Monday. This rule will only
     work if it detects the date format in use. So far, these formats are supported:
       * "Monday, 7 October 2014"
       * "Monday, 7 Oct 2014"
       * "Monday, October 7, 2014"
       * "Monday, Oct 7, 2014"

-Persian:
    -added initial support for Persian (Farsi)

-French:
    -added a synthesizer - the agreement rule can now make suggestions
     for some errors.
    -added/improved several rules
    -New rule that checks if a weekday matches a date, e.g. detects
     "vendredi 28/08/2014", as that date isn't a Friday.

-German:
    -Fixed a rare NullPointerException and an ArrayIndexOutOfBoundsException
    -Fixed several false alarms
    -New rule that checks for sentences without a verb (turned off by default due to
     the risk of false alarms)
    -New rule that checks if a weekday matches a date, e.g. detects
     "Dienstag, 29.9.2014", as that date isn't a Tuesday.
    -Performance improvements for spell check suggestions
    -Performance improvements for the multi-thread use case, where JLanguageTool
     gets created per thread, but German gets created only once
    
-Portuguese:
    -added/improved several rules
    -added many dozens of compound words

-Russian:
    -added new rules    
    -fix SourceForge feature request #38 (check for different quotation marks)

-Polish:
    -added and improved some rules
     
-Spanish:
    -Added new POS category Z (for spelled numbers, e.g. 'uno', 'dos', ...)