@@ -21,6 +21,9 @@ LanguageTool Change Log
     -Better suggestions for English learners: irregular verbs, nouns, and adjectives now
      usually have a better suggestion. For example, 'thinked' suggests 'thought',
      'womans' suggests 'women'.
+    -More misspellings provide suggestions now, e.g. 'garentee' (guarantee),
+    'greatful' (grateful). This may cause a performance decrease of ~ 10% (more for
+     texts with a lot of unknown words).
     -New rule that checks if a weekday matches a date, e.g. detects
      "Monday, 7 October 2014", as that date isn't a Monday. This rule will only
      work if it detects the date format in use. So far, these formats are supported:
